tests/lean/bug1.lean.expected.out
bug1.lean:9:7: error: type mismatch at definition 'and_intro', expected type
    Pi (p : bool) (q : bool) (H1 : p) (H2 : q), a
given type:
    Pi (p : bool) (q : bool) (H1 : p) (H2 : q) (c : bool) (H : p -> q -> c), c
bug1.lean:13:7: error: type mismatch at definition 'and_intro', expected type
    Pi (p : bool) (q : bool) (H1 : p) (H2 : q), (and p p)
given type:
    Pi (p : bool) (q : bool) (H1 : p) (H2 : q) (c : bool) (H : p -> q -> c), c
bug1.lean:17:7: error: type mismatch at definition 'and_intro', expected type
    Pi (p : bool) (q : bool) (H1 : p) (H2 : q), (and q p)
given type:
    Pi (p : bool) (q : bool) (H1 : p) (H2 : q) (c : bool) (H : p -> q -> c), c
and_intro : Pi (p : bool) (q : bool) (H1 : p) (H2 : q), (and p q)
